src/objects/Document_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Document_Description__c</fullName>
        <label>Document Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disbursement</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Condition_Code__c</fullName>
        <label>Loan Condition Code</label>
        <picklist>
            <picklistValues>
                <fullName>MI-FLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE-AIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE-STD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <label>Loan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EIDL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Document Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Loan_Condition_Code__c</columns>
        <columns>Loan_Type__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Document_Description__c</columns>
        <columns>Document_Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Document Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Checklist</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>